<resources>
    <string name="app_name">FinancasDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="categories">Categories</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="budget">Budget</string>
    <string name="chart">Chart</string>
    <string name="category_description">Category description</string>
    <string name="add_credit_transaction">Add Credit Transaction</string>
    <string name="add_debit_transaction">Add Debit Transaction</string>
    <string name="add_category">Add Category</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="type">"Type: "</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="select_date">Select Date</string>
    <string name="difference">Difference</string>
    <string name="save_transaction_error_message">An error occurred while saving your transaction</string>
    <string name="save_transaction_invalid_date">You must pick a date</string>
    <string name="save_transaction_invalid_value">You must insert a value</string>
    <string name="save_category_invalid_type">You must pick one of the categories</string>
    <string name="save_category_invalid_description">You must inform a description for the category</string>
    <string name="save_category_error_message">An error occurred while saving your category</string>
</resources>
