<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_action_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_action_credit"
            android:title="@string/credit" />
        <item
            android:id="@+id/nav_debit"
            android:icon="@drawable/ic_action_debit"
            android:title="@string/debit"/>
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_action_budget"
            android:title="@string/budget" />

        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_action_chart"
            android:title="@string/chart" />
    </group>

</menu>
