<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.add.AddCategory">

    <EditText
        android:id="@+id/editText"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category_description"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RadioButton
            android:id="@+id/radioCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:paddingLeft="0dp"
            android:paddingEnd="24dp"
            android:paddingStart="0dp"
            android:checked="true"
            android:text="@string/credit"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <RadioButton
            android:id="@+id/radioDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioType" />

</androidx.constraintlayout.widget.ConstraintLayout>