<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/creditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/debitText"
        app:layout_constraintEnd_toStartOf="@+id/credit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFrom" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 50,00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/debit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditText"
        app:layout_constraintTop_toBottomOf="@+id/dateTo" />

    <TextView
        android:id="@+id/debitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/differenceText"
        app:layout_constraintEnd_toStartOf="@+id/debit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditText" />

    <TextView
        android:id="@+id/debit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 40,00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/difference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/debitText"
        app:layout_constraintTop_toBottomOf="@+id/credit" />

    <TextView
        android:id="@+id/differenceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difference"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/difference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debitText" />

    <TextView
        android:id="@+id/difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 10,00"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/differenceText"
        app:layout_constraintTop_toBottomOf="@+id/debit" />

    <ImageView
        android:id="@+id/imageDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateTo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date" />

    <ImageView
        android:id="@+id/imageDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/creditText"
        app:layout_constraintEnd_toStartOf="@+id/dateTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateFrom"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_date" />

    <TextView
        android:id="@+id/dateFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="10/05/2019"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/creditText"
        app:layout_constraintEnd_toStartOf="@+id/imageDateFrom"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="15/05/2019"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/credit"
        app:layout_constraintEnd_toStartOf="@+id/imageDateTo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageDateFrom"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>